Fix expired message align

--- a/apps/auction/src/App.scss
+++ b/apps/auction/src/App.scss
@@ -13,6 +13,9 @@
 
 main {
   flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 30px 0 60px;
   position: relative; // for loaders
 }
